--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,39 @@
 .App {
-  max-width: 1170px;
-  padding: 0 15px;
-  margin: 0 auto;
   display: grid;
   grid-template-rows: 80px 1fr;
   grid-template-columns: 2fr 10fr;
   grid-template-areas: "header header"
-                        "nav cont";
-  grid-gap: 10px;
+                        "cont cont";
+  background-color: #bdbdbd;
+  min-height: 100vh;
 
 }
 
 .app-wrapper-content {
+  background-color: #f9f9f9;  
+  flex: 1;
+  margin-top: 5px;
+  border-radius: 8px;
+  -webkit-box-shadow: 0px 1px 7px -3px rgba(0,0,0,0.55);
+    -moz-box-shadow: 0px 1px 7px -3px rgba(0,0,0,0.55);
+    box-shadow: 0px 1px 7px -3px rgba(0,0,0,0.55);
+}
+
+.main {
   grid-area: cont;
-  background-color: gold;
   display: flex;
 }
+
+.wrapper {
+  max-width: 1170px;
+  width: 100%;
+  margin: 0 auto;
+  height: 100%;
+}
+
+
+  
+
 
 
 
