--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,6 +1,9 @@
 .header {
     grid-area: header;
-    background-color: aqua;
+    height: 79px;
+    box-shadow: inset 0 -1px 7px rgba(228, 91, 51, 0.75);
+    background-color: #ff5c2d;
+    background-image: linear-gradient(to top, #f44620 0%, #fc6236 70%, #fa592b 97%, #fa592b 100%);
 }
 
 .header img {
@@ -8,10 +11,92 @@
     max-height: 50px;
 }
 
-.loginBlock {
-    float: right;
+.headerContainer {
+    display: flex;
+    height: 100%;
+    align-items: center;
+}
+
+.logotype {
+    font-family: 'Chelsea Market', cursive;
+    color: #ffffff;
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 28px;  
+    margin-right: auto;
+}
+
+.logotype img {
+    margin-right: 6px;
+}
+
+.logoName {
+    vertical-align: 8px;
+    margin-right: 18px;
+}
+
+.logoSlogan {
+    font-family: Telegrafico;
+    font-size: 14px;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: normal;
+    line-height: 28px;
+    vertical-align: 12px;
 }
 
 .loginBlock a {
     color: indianred;   
 }
+
+.authorized {
+    display: flex;
+    position: relative;
+    z-index: 5;
+}
+
+.image {
+    -webkit-box-shadow: inset -1px 2px 20px -2px rgba(0,0,0,1);
+    -moz-box-shadow: inset -1px 2px 20px -2px rgba(0,0,0,1);
+    box-shadow: inset -1px 2px 20px -2px rgba(0,0,0,1);
+    border: 2px solid #db4737;
+    border-radius: 5px;
+    width: 50px;
+    height: 50px;
+}
+
+.image img {
+    position: relative;
+    display: block;
+    z-index: -2;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.authorizedTextBlock {
+    text-align: right;
+    margin-right: 8px;
+}
+
+.authorizedTextBlock div button {
+    box-shadow: inset 1px 2px 1px rgba(255, 255, 255, 0.58);
+    border: 1px solid #bcbcbc;
+    border-radius: 2px;
+    background-color: #e1e1e1;
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.46) 0%, rgba(255, 255, 255, 0.46) 100%);
+    outline: 1px solid red;
+    font-family: Dosis;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.userLogin {
+    font-family: Dosis;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+}
+    
+    
+
