--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -2,3 +2,15 @@
     display: flex;
     padding: 10px;
 }
+
+.about img {
+    width: 100px;
+    height: 100px;
+    margin-right: 15px;
+}
+
+.contact {
+    margin-left: 15px;
+    border-bottom: 1px gray solid;
+}
+    
